@@ -1,3 +1,10 @@
+2006-09-25  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (graph.density) :
+	added loops argument
+	* interfaces/R/src/rinterface.c (R_igraph_density) : added loops 
+	argument
+
 2006-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/structure.generators.R (graph.edgelist) : added
@@ -9,7 +16,7 @@
 	* interfaces/R/igraph/R/plot.R (rglplot) : updated
 
 	* interfaces/R/igraph/R/flow.R (graph.maxflow) : added
-	* interfaces/R/src/rinterface.R (R_igraph_maxflow) : added
+	* interfaces/R/src/rinterface.c (R_igraph_maxflow) : added
 	
 2006-09-22  Gabor Csardi  <csardi@rmki.kfki.hu>
 
