@@ -1,3 +1,7 @@
+2006-09-25  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/structural_properties.c (igraph_density) : added loops argument
+
 2006-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/flow.c (igraph_maxflow) : added
